# class-group

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md
bicycl-master/: .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  main  main.cpp
bicycl-master/benchs/: CMakeCache.txt  CMakeLists.txt  Makefile  benchmark_CL_HSMqk.cpp  cmake_install.cmake  main_old.cpp
bicycl-master/doc/: Doxyfile  Makefile  cmake_install.cmake  index.md  installation.md
bicycl-master/miracl/: arch.h  big_B384_58.h  bls_BLS12381.h  config_big_B384_58.h  config_curve_BLS12381.h  config_field_BLS12381.h  ecdh_BLS12381.h  ecp2_BLS12381.h  ecp_BLS12381.h  fp12_BLS12381.h  fp2_BLS12381.h  fp4_BLS12381.h  fp_BLS12381.h  hpke_BLS12381.h  mpin_BLS12381.h  pair_BLS12381.h
bicycl-master/src/: CMakeLists.txt  Makefile  bicycl.hpp  cmake_install.cmake  internals.hpp
bicycl-master/src/bicycl/: CL_HSM_utils.hpp  CL_HSM_utils.inl  CL_HSMqk.hpp  CL_HSMqk.inl  DKG.hpp  DKG.inl  NetworkingManager.hpp  dealing.pb.cc  dealing.pb.h  gmp_extras.hpp  gmp_extras.inl  qfi.hpp  qfi.inl
bicycl-master/src/protobuff/: dealing.proto
bicycl-master/tests/: CMakeLists.txt  test_CL_HSMqk.cpp  test_Paillier.cpp  test_gmp_extras.cpp
include/: DKG_Dealing.hpp  DKG_Helper.hpp  Utils.hpp  ZK_Share.hpp
src/: DKG_Helper.cpp  Utils.cpp  ZK_Share.cpp  main.cpp  main.rs
